# amplifier-foundation

./: .gitignore  .pre-commit-hooks.yaml  .resolver-priority-tripwire-baseline.json  EXAMPLES_SUMMARY.md  Makefile  README.md  RELEASING.md  bundle.detail.md  bundle.dot  bundle.md  overview-option-b3-enhanced.dot  overview.dot  pyproject.toml  pyrightconfig.json  test_polyglot_bundles_md.py
agents/: TOPOLOGY.dot  amplifier-smoke-test.dot  amplifier-smoke-test.md  bug-hunter.dot  bug-hunter.md  bundle-design-expert.md  ecosystem-expert.dot  ecosystem-expert.md  explorer.dot  explorer.md  file-ops.dot  file-ops.md  foundation-expert.dot  foundation-expert.md  git-ops.dot  git-ops.md  integration-specialist.dot  integration-specialist.md  modular-builder.dot  modular-builder.md  post-task-cleanup.dot  post-task-cleanup.md  security-guardian.dot  security-guardian.md  session-analyst.dot  session-analyst.md  session-finder.md  shell-exec.dot  shell-exec.md  test-coverage.dot  test-coverage.md  web-research.dot  web-research.md  zen-architect.dot  zen-architect.md
amplifier-foundation/: bundle.dot
amplifier_foundation/: __init__.py  background.py  bundle.py  events.py  registry.py  serialization.py  spawn.py  spawn_utils.py  subprocess_runner.py  tracing.py  triggers.py
behaviors/: agents.detail.md  agents.dot  agents.yaml  amplifier-dev.detail.md  amplifier-dev.dot  amplifier-dev.yaml  bundle-design.yaml  explanatory.yaml  foundation-expert.detail.md  foundation-expert.dot  logging.detail.md  logging.dot  progress-monitor.detail.md  progress-monitor.dot  progress-monitor.yaml  redaction.detail.md  redaction.dot  redaction.yaml  scope-discipline.yaml  sessionindicator.yaml  sessions.detail.md  sessions.dot  sessions.yaml  shadow-amplifier.detail.md  shadow-amplifier.dot  shadow-amplifier.yaml  status-context.detail.md  status-context.dot  streaming-ui.detail.md  streaming-ui.dot  streaming-ui.yaml  tasks.detail.md  tasks.dot  todo-reminder.detail.md  todo-reminder.dot
bundles/: amplifier-dev.detail.md  amplifier-dev.yaml  desktop.yaml  minimal.detail.md  with-anthropic.detail.md  with-anthropic.yaml  with-openai.detail.md  with-openai.yaml
context/: CONTEXT_POISONING.md  IMPLEMENTATION_PHILOSOPHY.md  ISSUE_HANDLING.md  (+7 more)
experiments/bundle-configurator/: README.md  pyproject.toml
experiments/bundle-configurator/amplifier_configurator/: __init__.py  configurator.py  dependencies.py  models.py  provenance.py  serialize.py  tokens.py
experiments/bundle-configurator/tests/: conftest.py  e2e_shadow_test.py  test_configurator.py  test_dependencies.py  test_integration.py  test_models.py  test_provenance.py  test_public_api.py  test_real_bundles.py  test_serialize.py  test_tokens.py
experiments/exp-lean/modules/tool-delegate/: README.md  pyproject.toml
experiments/exp-lean/modules/tool-delegate/amplifier_module_tool_delegate/: __init__.py
modules/hooks-process-guard/: pyproject.toml
modules/hooks-process-guard/amplifier_module_hooks_process_guard/: __init__.py
modules/hooks-process-guard/tests/: test_process_guard.py
(+409 files in other folders)
