[project]
name = "amplifier-module-hooks-process-guard"
version = "0.1.0"
description = "Process guard hooks to prevent runaway subprocesses and resource exhaustion"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core>=1.0.0",
]

[project.entry-points."amplifier.modules"]
hooks-process-guard = "amplifier_module_hooks_process_guard:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_process_guard"]
